Fix alignment for topic stat block

--- a/common/common.scss
+++ b/common/common.scss
@@ -1621,6 +1621,7 @@ ol.category-breadcrumb {
 
 .title-wrapper {
   width: auto !important;
+  align-items: flex-start !important;
 }
 
 #edit-title {
